# sparse-ir-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  PLAN.md  README.md  bump_version_downstream.md  check_version.py
capi_benchmark/: BISECT_GUIDE.md  CMakeLists.txt  DEBUG_README.md  README.md  benchmark1.c  benchmark2.c  bisect_helper.sh  bisect_manual.sh  bisect_test.sh  debug_benchmark.c  issue20251210.md  profile_benchmark2.sh  run_debug.sh  run_with_rust_capi.sh  test_step.c  test_step2.c  test_sve_memory.c  test_sve_simple.c
capi_benchmark/_build/: CMakeCache.txt  Makefile  benchmark1  cmake_install.cmake
capi_benchmark/_install/lib/: libsparseir_capi.dylib
cxx_tests/: CMakeLists.txt  _utils.hpp  cinterface_core.cxx  cinterface_integration.cxx  gemmbackend.hpp  run_with_rust_capi.sh  verify_dlr.jl  xorshift64.hpp
fortran/: CMakeLists.txt  README.md  _cbinding.inc  fit_tau_impl.inc  generate_dlr2ir.py  generate_evaluate_matsubara.py  generate_evaluate_tau.py  generate_fit_matsubara.py  generate_fit_tau.py  generate_ir2dlr.py  pyproject.toml  sparseir.mod  sparseir_ext.F90  sparseir_ext.mod  test_all_compilers.sh  test_case.f90  test_case.mod  test_cbinding.inc  test_cont.f90  test_cont2.f90  test_cont_amp__lambda.f90  test_cont_amp_lambda.f90  test_cont_amplambda.f90  test_cont_lambda.f90  test_continuation.f90  test_exact_format.f90  test_exact_lines.f90  test_exact_match.f90  test_interface.f90  test_interface2.f90  test_interface_use.f90  test_long.f90  test_long_func.f90  test_no_interface.f90  test_problem.f90  test_problem.mod  test_short.f90  test_snippet.f90  test_snippet2.f90  test_sve  (+4 more)
fortran/examples/: CMakeLists.txt  build_and_run.sh
fortran/sample/: build_and_run.sh  second_order_gkf_gamma.txt  second_order_gkl_gamma.txt  second_order_gkt_gamma.txt  second_order_gkt_m.txt  second_order_grt_r_0.txt  second_order_perturbation_fort.f90  second_order_skf_gamma.txt  second_order_skl_gamma.txt  second_order_srl_r_0.txt  second_order_srt_r_0.txt
fortran/script/: generate_c_binding.py  generate_dlr2ir.py  generate_evaluate_matsubara.py  generate_evaluate_tau.py  generate_fit_matsubara.py  generate_fit_tau.py  generate_ir2dlr.py
fortran/src/: _cbinding.inc  _cbinding_public.inc  dlr2ir_impl.inc  evaluate_matsubara_impl.inc  evaluate_tau_impl.inc  fit_matsubara_impl.inc  fit_tau_impl.inc  ir2dlr_impl.inc  sparse_ir_c.f90  sparse_ir_extension.f90  sparseir.f90  sparseir_ext.F90
fortran/test/: CMakeLists.txt  run_timing_benchmark.sh  run_timing_benchmark_qsub.sh  test_analytic_gf.f90  test_basis_functions.f90  test_core.f90  test_dlr.f90  test_error_handling.f90  test_ext.f90  test_integration.f90  test_memory.f90  test_multidim.f90  test_old_time.f90  test_sampling.f90  test_timing.f90
python/: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  build_conda.sh  example.py  example_with_poles.py  hatch_build.py  my.diff  prepare_build.py  pyproject.toml  run_tests.sh  setup_build.py  setup_conda_path.sh
python/conda-recipe/: meta.yaml
python/pylibsparseir/: .gitignore  core.py  ctypes_autogen.py
python/tests/: conftest.py
python/tests/c_api/: core_tests.py  dlr_tests.py  integration_tests.py  sampling_tests.py
python/tools/: gen_ctypes.py
sparse-ir/: Cargo.toml  README.md
sparse-ir-capi/: Cargo.toml  README.md  build.rs  cbindgen.toml
sparse-ir-capi/assets/: sparse_ir_capi.h
sparse-ir-capi/examples/: funcs_from_piecewise_legendre_debug.jl  spir_basis_new_from_sve_and_inv_weight_debug.jl  spir_gauss_legendre_rule_piecewise_ddouble_debug.jl  spir_kernel_get_domain_debug.jl  spir_kernel_get_sve_hints_debug.jl  spir_kernel_get_sve_hints_segments.jl  spir_sve_result_from_matrix_centrosymmetric_debug.jl  spir_sve_result_from_matrix_debug.jl  spir_uhat_get_default_matsus_debug.jl  test_julia.jl  uhat_full_debug.jl
sparse-ir-capi/include/sparseir/: sparseir.h
sparse-ir-capi/src/: basis.rs  dlr.rs  funcs.rs  gemm.rs  kernel.rs  lib.rs  macros.rs  sampling.rs  sve.rs  types.rs  utils.rs
sparse-ir-capi/tests/: integration_test.rs  test_capi_custom_sampling.rs  test_funcs_deriv.rs
sparse-ir/examples/: basisgen.rs  benchmark1.rs  benchmark_matmul.rs  debug.rs  debug_high_api.rs  debug_works.rs  integration_example.rs  roundtrip.rs
sparse-ir/src/: basis.rs  basis_tests.rs  basis_trait.rs  col_piv_qr.rs  dlr.rs  dlr_tests.rs  fitter.rs  fitter_tests.rs  fpu_check.rs  freq.rs  gauss.rs  gauss_tests.rs  gemm.rs  interpolation1d.rs  interpolation1d_tests.rs  interpolation2d.rs  interpolation2d_tests.rs  kernel.rs  kernel_tests.rs  kernelmatrix.rs  kernelmatrix_tests.rs  lib.rs  matsubara_sampling.rs  matsubara_sampling_tests.rs  numeric.rs  poly.rs  polyfourier.rs  sampling.rs  tau_sampling_tests.rs  taufuncs.rs  test_utils.rs  traits.rs  tsvd.rs  working_buffer.rs
sparse-ir/src/fitters/: common.rs  complex.rs  complex_to_real.rs  mod.rs  real.rs  tests.rs
sparse-ir/src/sve/: compute.rs  strategy.rs  tests.rs  types.rs  (+1 more)
sparse-ir/tests/: basis_comparison.rs  readme_examples.rs  readme_sample.rs  sve_comparison.rs  test_basis_sampling.rs
sparseir-capi/: Cargo.toml  README.md  build.rs  cbindgen.toml  parse_header.py  pyproject.toml  test_install  test_install.c  test_install_cbindgen  test_install_complete  test_install_manual  test_install_sparseir  test_user_install.c
sparseir-capi/examples/: debug.jl  funcs_from_piecewise_legendre_debug.jl  spir_basis_new_from_sve_and_inv_weight_debug.jl  spir_gauss_legendre_rule_piecewise_ddouble_debug.jl  spir_kernel_get_domain_debug.jl  spir_kernel_get_sve_hints_debug.jl  spir_kernel_get_sve_hints_segments.jl  spir_sve_result_from_matrix_centrosymmetric_debug.jl  spir_sve_result_from_matrix_debug.jl  spir_uhat_get_default_matsus.jl  spir_uhat_get_default_matsus_debug.jl  test_julia.jl  uhat_full_debug.jl
sparseir-capi/include/: sparseir.h  sparseir.h.backup.20251026_110813  sparseir_backup.h  sparseir_capi.h  sparseir_capi.h.old
sparseir-capi/src/: basis.rs  dlr.rs  funcs.rs  gemm.rs  kernel.rs  lib.rs  sampling.rs  sve.rs  types.rs  utils.rs
sparseir-capi/tests/: integration_test.rs
(+57 files in other folders)
