[workspace]
members = [
    "sparse-ir",
    "sparse-ir-capi",
]
resolver = "2"

[workspace.dependencies]
mdarray = "0.7.2"
mdarray-linalg = "0.1.2"
mdarray-linalg-faer = "0.1.2"
sparse-ir = { version = "0.8.0", path = "sparse-ir" }
faer = "0.23"
faer-traits = "0.23"
num-complex = "0.4"
num-traits = "0.2"
special = "0.2"
statrs = "0.16"
thiserror = "1.0"
once_cell = "1.19"
libc = "0.2"
blas-sys = "0.7"

# Development dependencies (for tests only)
approx = "0.5"
proptest = "1.0"
libm = "0.2"
dashu-float = "0.4"
dashu-base = "0.4"
cargo-husky = "1.5"

[workspace.package]
version = "0.8.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpM-lab/sparse-ir-rs"
authors = ["SparseIR Team"]
description = "Rust implementation of SparseIR functionality"

[workspace.lints.rust]
unused_variables = "warn"
unused_imports = "warn"
dead_code = "warn"
non_snake_case = "warn"
unused_mut = "warn"

[profile.release]
# Maximum optimization for performance
opt-level = 3
# Link-time optimization for better performance
lto = true
# Single codegen unit for better optimization
codegen-units = 1
